--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 .idea/
 __pycache__/
+cache/*.sqlite
+
+# FastF1 cache artifacts (ensure all cache subfolders are ignored)
+cache/*.sqllite
+cache/*.ff1pkl
+cache/**/*.sqllite
+cache/**/*.ff1pkl
+logs/*txt
